fix: review items 1-6, 8-9
1. Add CJS output for commitlint require() compatibility
2. Fix action.yml invalid default syntax
4. Change peer dep from @commitlint/lint to @commitlint/cli >=17
5. Fix empty error message when applicable='never'
6. Use start-of-line regex for section matching (case-insensitive)
8. Add engines field (node >=18) to all packages
9. Detect package manager in generated CI workflow

--- a/packages/action/action.yml
+++ b/packages/action/action.yml
@@ -4,7 +4,7 @@ inputs:
   token:
     description: "GitHub token"
     required: false
-    default: ${{ github.token }}
+    default: ""
 runs:
   using: "node20"
   main: "dist/index.js"
