--- a/packages/init/package.json
+++ b/packages/init/package.json
@@ -11,6 +11,9 @@
   "scripts": {
     "build": "tsup"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
     "fs-extra": "^11.2.0"
   },
