feat: enhance init CLI with @clack/prompts for polished UX
Why:
The previous CLI used basic console.log and readline which provided
a poor developer experience. Modern CLI tools use polished prompts
with proper visual hierarchy, spinners, and grouped information.

This refactor replaces fs-extra + readline with @clack/prompts while
maintaining all existing logic and functionality. The new interface
provides:
- Professional intro/outro branding
- Grouped environment detection info
- Clear action plan presentation
- Elegant confirm prompts with proper cancellation
- Spinners for long-running operations
- Step-by-step progress indicators
- Helpful example notes at completion

Alternatives:
Considered ora + inquirer but @clack/prompts provides better
integration and smaller bundle size for this use case.

--- a/packages/init/package.json
+++ b/packages/init/package.json
@@ -7,7 +7,9 @@
   },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsup"
   },
@@ -15,6 +17,7 @@
     "node": ">=20"
   },
   "dependencies": {
+    "@clack/prompts": "^1.0.1",
     "fs-extra": "^11.2.0"
   },
   "devDependencies": {
