feat: publish @muselet/commitlint-plugin@0.2.1 and @muselet/init@0.1.0
### Why
First public release of @muselet/init and updated plugin with breaking
config shape change (string[] → { required, recommended }).

### Approach
- commitlint-plugin: export DEFAULT_VALUE, RuleValue, SectionConfig from
  public API so @muselet/init can import them without relative paths
- init: replace monorepo-relative imports with @muselet/commitlint-plugin
  dependency (^0.2.1) — required for npx @muselet/init to work correctly
- Both packages bumped and published to npm

--- a/packages/commitlint-plugin/package.json
+++ b/packages/commitlint-plugin/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@muselet/commitlint-plugin",
-  "version": "0.1.0",
+  "version": "0.2.1",
   "type": "module",
   "main": "./dist/index.cjs",
   "types": "./dist/index.d.ts",
@@ -11,7 +11,9 @@
       "require": "./dist/index.cjs"
     }
   },
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsup",
     "test": "vitest run"
@@ -20,7 +22,9 @@
     "@commitlint/cli": ">=17.0.0"
   },
   "peerDependenciesMeta": {
-    "@commitlint/cli": { "optional": true }
+    "@commitlint/cli": {
+      "optional": true
+    }
   },
   "engines": {
     "node": ">=20"
