--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -2,5 +2,15 @@
   "name": "@muselet/web",
   "version": "0.1.0",
   "private": true,
-  "type": "module"
+  "type": "module",
+  "scripts": {
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview"
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.2.0",
+    "astro": "^5.17.3",
+    "tailwindcss": "^4.2.0"
+  }
 }
